# SlaveTatsNG-testing

interface/: CMakeLists.txt  CMakePresets.json  deploy.bat  prepare-headers.bat  vcpkg.json
interface/cmake/: XSEPlugin.cmake
interface/include/: SlaveTatsNG_Interface.h
interface/src/: PCH.h  main.cpp
